# Task-6--Report-of-Monaco-2018-Racing

./: LICENSE  README.md  report.py  setup.cfg
src/MonacoReport_MAKSYM_GERMAN.egg-info/: PKG-INFO  SOURCES.txt
